libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_combined_app_blueprint_config_from_jsonc_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config

---
{
  "version": "2025-11-02",
  "transform": [
    "celerity-2026-02-28"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "invoiceBucket": {
      "type": "string",
      "description": "The name of the bucket to use for storing invoices."
    },
    "invoiceEventStreamId": {
      "type": "string",
      "description": "The ID of the data stream for invoice events."
    },
    "orderDBStreamId": {
      "type": "string",
      "description": "The ID of the database stream for order data."
    },
    "orderEventsSourceId": {
      "type": "string",
      "description": "The ID of the event source for order events."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": "true",
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-GetOrderHandler-v1",
        "codeLocation": "./orders",
        "handler": "handlers.get_order",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "invoiceEventStream": {
      "type": "celerity/consumer",
      "metadata": {
        "displayName": "Invoice Event Stream Consumer"
      },
      "spec": {
        "externalEvents": {
          "invoiceEventStream": {
            "sourceType": "dataStream",
            "sourceConfiguration": {
              "batchSize": 10,
              "dataStreamId": "invoice-event-stream-id",
              "partialFailures": true,
              "startFromBeginning": false
            }
          }
        }
      },
      "linkSelector": {
        "byLabel": {
          "group": "invoiceStream"
        }
      }
    },
    "invoiceEventStreamProcessor": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Invoice Event Stream Processor",
        "labels": {
          "group": "invoiceStream"
        }
      },
      "spec": {
        "handlerName": "Orders-InvoiceEventStreamProcessor-v1",
        "codeLocation": "./orders",
        "handler": "handlers.process_invoice_event_stream",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "invoiceFileEventHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Invoice File Event Handler",
        "labels": {
          "group": "invoices"
        }
      },
      "spec": {
        "handlerName": "Orders-InvoiceFileEventHandler-v1",
        "codeLocation": "./orders",
        "handler": "handlers.invoice_file_event",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "invoiceFileEvents": {
      "type": "celerity/consumer",
      "metadata": {},
      "spec": {
        "externalEvents": {
          "invoiceFileEvent": {
            "sourceType": "objectStorage",
            "sourceConfiguration": {
              "bucket": "invoice-bucket",
              "events": [
                "created",
                "deleted",
                "metadataUpdated"
              ]
            }
          }
        }
      },
      "linkSelector": {
        "byLabel": {
          "group": "invoices"
        }
      }
    },
    "orderDBStream": {
      "type": "celerity/consumer",
      "metadata": {
        "displayName": "Order DB Stream Consumer"
      },
      "spec": {
        "externalEvents": {
          "orderStream": {
            "sourceType": "dbStream",
            "sourceConfiguration": {
              "batchSize": 10,
              "dbStreamId": "order-db-stream-id",
              "partialFailures": true,
              "startFromBeginning": false
            }
          }
        }
      },
      "linkSelector": {
        "byLabel": {
          "group": "orders"
        }
      }
    },
    "orderDBStreamProcessor": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Order DB Stream Processor",
        "labels": {
          "group": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-OrderDBStreamProcessor-v1",
        "codeLocation": "./orders",
        "handler": "handlers.process_order_db_stream",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "orderEvents": {
      "type": "celerity/consumer",
      "metadata": {
        "displayName": "Order Events Consumer"
      },
      "spec": {
        "sourceId": "order-events-source-id",
        "batchSize": 10,
        "visibilityTimeout": 30,
        "waitTimeSeconds": 2,
        "partialFailures": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    },
    "orderEventsProcessor": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Order Events Processor",
        "annotations": {
          "celerity.handler.consumer": "true"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-OrderEventsProcessor-v1",
        "codeLocation": "./orders",
        "handler": "handlers.process_order_events",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "ordersApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Orders API"
      },
      "spec": {
        "protocols": [
          "http"
        ],
        "cors": "*",
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "certificate-id",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": [
            "jwt"
          ],
          "guards": {
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.newstack.cloud/oauth2/v1/",
              "tokenSource": "$.headers.Authorization",
              "audience": [
                "https://identity.newstack.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  }
}
