libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_handler_config_resources_blueprint_config_from_yaml_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2025-05-12",
  "transform": [
    "celerity-2026-02-28"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "logLevel": {
      "type": "string",
      "allowedValues": [
        "DEBUG",
        "INFO",
        "WARNING",
        "ERROR"
      ],
      "default": "INFO",
      "description": "The log level to use for logging."
    },
    "paymentApiSecret": {
      "type": "string",
      "secret": true,
      "description": "The secret to use for authenticating with the API."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "billingHandlerConfig": {
      "type": "celerity/handlerConfig",
      "metadata": {
        "displayName": "Billing Handlers Configuration",
        "labels": {
          "handlerGroup": "billing"
        }
      },
      "spec": {
        "codeLocation": "./billing",
        "runtime": "python3.12.x",
        "memory": 512,
        "timeout": 30,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "DEBUG",
          "PAYMENT_API_SECRET": "payment-api-secret",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "createInvoiceHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Create Invoice Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "POST",
          "celerity.handler.http.path": "/invoices"
        },
        "labels": {
          "application": "payments"
        }
      },
      "spec": {
        "handlerName": "Payments-CreateInvoiceHandler-v1",
        "handler": "handlers.create_invoice"
      },
      "linkSelector": {
        "byLabel": {
          "handlerGroup": "billing"
        }
      }
    },
    "createOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Create Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "POST",
          "celerity.handler.http.path": "/orders"
        },
        "labels": {
          "application": "payments"
        }
      },
      "spec": {
        "handlerName": "Payments-CreateOrderHandler-v1",
        "handler": "handlers.create_order"
      },
      "linkSelector": {
        "byLabel": {
          "handlerGroup": "orders"
        }
      }
    },
    "getInvoiceHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Invoice Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/invoices/{invoiceId}"
        },
        "labels": {
          "application": "payments"
        }
      },
      "spec": {
        "handlerName": "Payments-GetInvoiceHandler-v1",
        "handler": "handlers.get_invoice"
      },
      "linkSelector": {
        "byLabel": {
          "handlerGroup": "billing"
        }
      }
    },
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "payments"
        }
      },
      "spec": {
        "handlerName": "Payments-GetOrderHandler-v1",
        "handler": "handlers.get_order"
      },
      "linkSelector": {
        "byLabel": {
          "handlerGroup": "orders"
        }
      }
    },
    "ordersHandlerConfig": {
      "type": "celerity/handlerConfig",
      "metadata": {
        "displayName": "Order Handlers Configuration",
        "labels": {
          "handlerGroup": "orders"
        }
      },
      "spec": {
        "codeLocation": "./orders",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "DEBUG",
          "PAYMENT_API_SECRET": "payment-api-secret",
          "SECRET_STORE_ID": "secret-store-id"
        }
      }
    },
    "paymentsApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Payments API"
      },
      "spec": {
        "protocols": [
          "http"
        ],
        "cors": {
          "allowCredentials": true,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": [
            "GET",
            "POST"
          ],
          "allowHeaders": [
            "Content-Type",
            "Authorization"
          ],
          "exposeHeaders": [
            "Content-Length"
          ],
          "maxAge": 3600
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "certificate-id",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwt",
          "guards": {
            "customGuard": {
              "type": "custom"
            },
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.newstack.cloud/oauth2/v1/",
              "tokenSource": "$.headers.Authorization",
              "audience": [
                "https://identity.newstack.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "description": "The Payments API that provides access to payment data.",
      "linkSelector": {
        "byLabel": {
          "application": "payments"
        }
      }
    }
  }
}
