libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_schedule_app_blueprint_config_from_yaml_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2023-04-20",
  "transform": [
    "celerity-2024-07-22"
  ],
  "resources": {
    "jobHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Job Handler",
        "annotations": {
          "celerity.handler.schedule": true
        },
        "labels": {
          "application": "jobs"
        }
      },
      "spec": {
        "handlerName": "Jobs-JobHandler-v1",
        "codeLocation": "./jobs",
        "handler": "handlers.job",
        "runtime": "python3.12.x",
        "memory": 1024,
        "timeout": 60,
        "tracingEnabled": true,
        "environmentVariables": {
          "LOG_LEVEL": "INFO"
        }
      }
    },
    "jobSchedule": {
      "type": "celerity/schedule",
      "metadata": {
        "displayName": "Job Schedule"
      },
      "spec": {
        "schedule": "rate(1 hour)"
      },
      "linkSelector": {
        "byLabel": {
          "application": "jobs"
        }
      }
    }
  }
}
