libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_shared_handler_config_blueprint_config_from_jsonc_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config
---
{
  "version": "2025-05-12",
  "transform": [
    "celerity-2026-02-28"
  ],
  "variables": {
    "certificateId": {
      "type": "string",
      "description": "The ID of the certificate to use for the API domain."
    },
    "logLevel": {
      "type": "string",
      "allowedValues": [
        "DEBUG",
        "INFO",
        "WARNING",
        "ERROR"
      ],
      "default": "INFO",
      "description": "The log level to use for logging."
    },
    "paymentApiSecret": {
      "type": "string",
      "secret": true,
      "description": "The secret to use for authenticating with the API."
    },
    "secretStoreId": {
      "type": "string",
      "description": "The ID of the secret store to use for storing secrets."
    }
  },
  "resources": {
    "createOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Create Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "POST",
          "celerity.handler.http.path": "/orders"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-CreateOrderHandler-v1",
        "handler": "handlers.create_order"
      }
    },
    "getOrderHandler": {
      "type": "celerity/handler",
      "metadata": {
        "displayName": "Get Order Handler",
        "annotations": {
          "celerity.handler.http": true,
          "celerity.handler.http.method": "GET",
          "celerity.handler.http.path": "/orders/{orderId}"
        },
        "labels": {
          "application": "orders"
        }
      },
      "spec": {
        "handlerName": "Orders-GetOrderHandler-v1",
        "handler": "handlers.get_order"
      }
    },
    "ordersApi": {
      "type": "celerity/api",
      "metadata": {
        "displayName": "Orders API"
      },
      "spec": {
        "protocols": [
          "http"
        ],
        "cors": {
          "allowCredentials": true,
          "allowOrigins": [
            "https://example.com",
            "https://another.example.com"
          ],
          "allowMethods": [
            "GET",
            "POST"
          ],
          "allowHeaders": [
            "Content-Type",
            "Authorization"
          ],
          "exposeHeaders": [
            "Content-Length"
          ],
          "maxAge": 3600
        },
        "domain": {
          "domainName": "api.example.com",
          "basePaths": [
            "/"
          ],
          "normalizeBasePath": false,
          "certificateId": "certificate-id",
          "securityPolicy": "TLS_1_2"
        },
        "auth": {
          "defaultGuard": "jwt",
          "guards": {
            "customGuard": {
              "type": "custom"
            },
            "jwt": {
              "type": "jwt",
              "issuer": "https://identity.newstack.cloud/oauth2/v1/",
              "tokenSource": "$.headers.Authorization",
              "audience": [
                "https://identity.newstack.cloud/api/manage/v1/"
              ]
            }
          }
        },
        "tracingEnabled": true
      },
      "description": "The Orders API that provides access to order data.",
      "linkSelector": {
        "byLabel": {
          "application": "orders"
        }
      }
    }
  },
  "metadata": {
    "sharedHandlerConfig": {
      "codeLocation": "./orders",
      "runtime": "python3.12.x",
      "memory": 1024,
      "timeout": 60,
      "tracingEnabled": true,
      "environmentVariables": {
        "LOG_LEVEL": "DEBUG",
        "PAYMENT_API_SECRET": "payment-api-secret",
        "SECRET_STORE_ID": "secret-store-id"
      }
    }
  }
}
