libs/runtime/blueprint-config-parser/tests/snapshots/blueprint_config_test__parses_workflow_app_blueprint_config_from_yaml_file.snap
---
source: blueprint-config-parser/tests/blueprint_config_test.rs
expression: blueprint_config

---
{
  "version": "2025-11-02",
  "transform": [
    "celerity-2026-02-28"
  ],
  "resources": {
    "docProcessingWorkflow": {
      "type": "celerity/workflow",
      "metadata": {},
      "spec": {
        "startAt": "fetchDocument",
        "states": {
          "documentProcessingDecision": {
            "type": "decision",
            "description": "Decide which document processing step to execute based on the document type.",
            "inputPath": "$.downloaded",
            "decisions": [
              {
                "condition": {
                  "inputs": [
                    "$.path",
                    "*.pdf"
                  ],
                  "function": "string_match"
                },
                "next": "processPDF"
              },
              {
                "condition": {
                  "inputs": [
                    "$.path",
                    "*.docx"
                  ],
                  "function": "string_match"
                },
                "next": "processDOCX"
              }
            ]
          },
          "failureDecision": {
            "type": "decision",
            "description": "Choose the failure state to transition to based on the error type.",
            "inputPath": "$.errorInfo",
            "decisions": [
              {
                "condition": {
                  "inputs": [
                    "$.error",
                    "DocumentFetchError"
                  ],
                  "function": "eq"
                },
                "next": "fetchFailure"
              },
              {
                "condition": {
                  "inputs": [
                    "$.error",
                    "DocumentScanError"
                  ],
                  "function": "eq"
                },
                "next": "scanFailure"
              },
              {
                "or": [
                  {
                    "inputs": [
                      "$.error",
                      "ExtractPDFError"
                    ],
                    "function": "eq"
                  },
                  {
                    "inputs": [
                      "$.error",
                      "PDFLoadError"
                    ],
                    "function": "eq"
                  }
                ],
                "next": "processPDFFailure"
              },
              {
                "or": [
                  {
                    "inputs": [
                      "$.error",
                      "ExtractDOCXError"
                    ],
                    "function": "eq"
                  },
                  {
                    "inputs": [
                      "$.error",
                      "DOCXLoadError"
                    ],
                    "function": "eq"
                  }
                ],
                "next": "processDOCXFailure"
              },
              {
                "condition": {
                  "inputs": [
                    "$.error",
                    "UploadToSystemError"
                  ],
                  "function": "eq"
                },
                "next": "uploadToSystemFailure"
              }
            ]
          },
          "fetchDocument": {
            "type": "executeStep",
            "description": "Fetch the document provided in the input data.",
            "inputPath": "$.document",
            "resultPath": "$.downloaded",
            "payloadTemplate": {
              "url": "$.url"
            },
            "next": "scanDocument",
            "retry": [
              {
                "matchErrors": [
                  "Timeout"
                ],
                "interval": 5,
                "maxAttempts": 3,
                "jitter": true,
                "backoffRate": 1.5
              }
            ],
            "catch": [
              {
                "matchErrors": [
                  "*"
                ],
                "next": "handleError",
                "resultPath": "$.errorInfo"
              }
            ]
          },
          "fetchFailure": {
            "type": "failure",
            "description": "The document could not be fetched.",
            "failureConfig": {
              "error": "DocumentFetchError",
              "cause": "The document could not be fetched from the provided URL."
            }
          },
          "handleError": {
            "type": "executeStep",
            "description": "Handle any error that occurred during the workflow, persisting status and error information to the domain-specific database.",
            "inputPath": "$.errorInfo",
            "next": "failureDecision"
          },
          "maliciousContentFound": {
            "type": "failure",
            "description": "Malicious content was found in the document.",
            "failureConfig": {
              "error": "MaliciousContentFound",
              "cause": "Malicious content was found in the document."
            }
          },
          "processDOCX": {
            "type": "executeStep",
            "description": "Process the word document to extract text and metadata.",
            "inputPath": "$.downloaded",
            "resultPath": "$.extractedDataFile",
            "payloadTemplate": {
              "filePath": "$.path"
            },
            "next": "waitForProcessing",
            "retry": [
              {
                "matchErrors": [
                  "Timeout"
                ],
                "interval": 5,
                "maxAttempts": 3,
                "jitter": true,
                "backoffRate": 1.5
              }
            ],
            "catch": [
              {
                "matchErrors": [
                  "*"
                ],
                "next": "handleError",
                "resultPath": "$.errorInfo"
              }
            ]
          },
          "processDOCXFailure": {
            "type": "failure",
            "description": "An error occurred while processing the word document.",
            "failureConfig": {
              "error": "DOCXProcessingError",
              "cause": "An error occurred while processing the word document."
            }
          },
          "processPDF": {
            "type": "executeStep",
            "description": "Process the PDF document to extract text and metadata.",
            "inputPath": "$.downloaded",
            "resultPath": "$.extractedDataFile",
            "payloadTemplate": {
              "filePath": "$.path"
            },
            "next": "waitForProcessing",
            "retry": [
              {
                "matchErrors": [
                  "Timeout"
                ],
                "interval": 5,
                "maxAttempts": 3,
                "jitter": true,
                "backoffRate": 1.5
              }
            ],
            "catch": [
              {
                "matchErrors": [
                  "*"
                ],
                "next": "handleError",
                "resultPath": "$.errorInfo"
              }
            ]
          },
          "processPDFFailure": {
            "type": "failure",
            "description": "An error occurred while processing the PDF document.",
            "failureConfig": {
              "error": "PDFProcessingError",
              "cause": "An error occurred while processing the PDF document."
            }
          },
          "scanDocument": {
            "type": "executeStep",
            "description": "Scans the document for any malicious content.",
            "resultPath": "$.scanResult",
            "next": "scanResultDecision",
            "retry": [
              {
                "matchErrors": [
                  "Timeout"
                ],
                "interval": 5,
                "maxAttempts": 3,
                "jitter": true,
                "backoffRate": 1.5
              }
            ],
            "catch": [
              {
                "matchErrors": [
                  "*"
                ],
                "next": "handleError",
                "resultPath": "$.errorInfo"
              }
            ]
          },
          "scanFailure": {
            "type": "failure",
            "description": "An error occurred while scanning the document.",
            "failureConfig": {
              "error": "DocumentScanError",
              "cause": "An error occurred while scanning the document."
            }
          },
          "scanResultDecision": {
            "type": "decision",
            "description": "Decide the next state based on the scan result.",
            "decisions": [
              {
                "condition": {
                  "inputs": [
                    "$.scanResult",
                    "Clean"
                  ],
                  "function": "eq"
                },
                "next": "documentProcessingDecision"
              },
              {
                "condition": {
                  "inputs": [
                    "$.scanResult",
                    "Malicious"
                  ],
                  "function": "eq"
                },
                "next": "maliciousContentFound"
              }
            ]
          },
          "success": {
            "type": "success",
            "description": "The video has been successfully processed."
          },
          "uploadToSystem": {
            "type": "executeStep",
            "description": "Upload the extracted data to the system.",
            "next": "success",
            "retry": [
              {
                "matchErrors": [
                  "Timeout"
                ],
                "interval": 5,
                "maxAttempts": 3,
                "jitter": true,
                "backoffRate": 1.5
              }
            ],
            "catch": [
              {
                "matchErrors": [
                  "*"
                ],
                "next": "handleError",
                "resultPath": "$.errorInfo"
              }
            ]
          },
          "uploadToSystemFailure": {
            "type": "failure",
            "description": "An error occurred while uploading the extracted data to the system.",
            "failureConfig": {
              "error": "UploadToSystemError",
              "cause": "An error occurred while uploading the extracted data to the system."
            }
          },
          "waitForProcessing": {
            "type": "wait",
            "next": "uploadToSystem",
            "waitConfig": {
              "seconds": "120"
            }
          }
        }
      },
      "linkSelector": {
        "byLabel": {
          "application": "docProcessor"
        }
      }
    }
  }
}
